--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
 
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
     body {
-        @apply overflow-x-hidden;
+        @apply md:overflow-x-hidden overflow-x-hidden;
         @apply font-[Raleway];
     }
     li {
